<?xml version="1.0"?>
<package format="2">
  <name>object_detection_gl_ros</name>
  <version>0.0.1</version>
  <description>The object_detection_gl_ros package</description>

  <maintainer email="project@soslab.co">SOSLAB Co., Ltd.</maintainer>

  <license>BSD</license>

  <url type="website">http://soslab.co</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
</package>
